--- a/index.html
+++ b/index.html
@@ -396,8 +396,9 @@
 
                 <div class="tab-pane fade" id="admin-notifications" role="tabpanel" aria-labelledby="admin-notifications-tab-button">
                     <div class="card">
-                        <div class="card-header">
-                            Notificaciones de Administrador
+                        <div class="card-header d-flex justify-content-between align-items-center">
+                            <span>Notificaciones de Administrador</span>
+
                         </div>
                         <div class="card-body" id="admin-notifications-list">
                             </div>
