--- a/index.html
+++ b/index.html
@@ -205,6 +205,10 @@
                                         </tbody>
                                 </table>
                             </div>
+                            
+                            <!-- Vista móvil de tarjetas para clientes -->
+                            <div class="mobile-services-view" id="client-list-cards">
+                            </div>
                         </div>
                     </div>
                 </div>
